--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -3,4 +3,6 @@
 
     <string name="twitter_consumer_key" translatable="false">YOUR_KEY_HERE</string>
     <string name="twitter_consumer_secret" translatable="false">YOUR_SECRET_HERE</string>
+
+    <string name="facebook_app_id">YOUR_APP_ID_HERE</string>
 </resources>
